--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li><a href="능히 구매한다!.html" title="어이어이!">능히 구매한다!</a></li>
   </ul>
 
-  <h2><small>꾸준함 없는 재능이 어떻게 힘을 잃는지</small>, 재능 없는 꾸준함이 얼마나 막강한지!</h2>
+  <h2>꾸준한 자만이 살아남지</h2>
 
 </body>
 </html>
