--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <h1><a href="index.html">지현이의 <u>능히</u> 겨울 나기 프로젝트</a></h1>
+  <h1><a href="index.html"><u>능히</u> 겨울 나기 프로젝트</a></h1>
 
   <ul>
     <li><a href="능히 읽는다!.html" title="어떤 책을 읽었을까?">능히 읽는다!</a></li>
